# fparkan

./: .clang-format  .gitignore  .renovaterc  Cargo.toml  README.md  build.zig.zon  deny.toml  fparkan_stage_0_2_audit_2026-06-23.md  fparkan_stage_0_audit_2026-06-23.md  meson.build  mkdocs.yml  renovate.config.cjs  rust-toolchain.toml
.devcontainer/: devcontainer.json
.gitea/workflows/: docs-deploy.yml  renovate.yml  test.yml
.github/: dependabot.yml  renovate.json
.github/workflows/: ci.yml  main.yml  mirror.yml  test.yml
adapters/fparkan-platform-sdl/: Cargo.toml
adapters/fparkan-platform-winit/: Cargo.toml
adapters/fparkan-platform-winit/src/: lib.rs
adapters/fparkan-render-gl/: Cargo.toml
adapters/fparkan-render-vulkan/: Cargo.toml  build.rs
adapters/fparkan-render-vulkan/shaders/: manifest.json  triangle.frag  triangle.frag.spv  triangle.vert  triangle.vert.spv
adapters/fparkan-render-vulkan/src/: asset_mesh.rs  ffi.rs  lib.rs  planning_backend.rs  policy.rs  shader_manifest.rs
adapters/fparkan-render-vulkan/src/ffi/: capabilities.rs  instance.rs  resources.rs  runtime.rs  smoke.rs  smoke_types.rs  surface.rs  swapchain.rs  swapchain_resources.rs  tests.rs  validation.rs
adr/: ADR-0001-modular-monolith.md  ADR-0002-behavior-not-abi.md  ADR-0003-raw-and-interpreted-data.md  ADR-0004-synthetic-and-licensed-tests.md  ADR-0005-deterministic-reference-runtime.md  ADR-0006-error-policy.md  ADR-0007-safe-sdl-opengl.md
apps/fparkan-cli/: Cargo.toml
apps/fparkan-cli/src/: main.rs
apps/fparkan-game/: Cargo.toml
apps/fparkan-game/src/: main.rs
apps/fparkan-headless/: Cargo.toml
apps/fparkan-headless/src/: main.rs
apps/fparkan-viewer/: Cargo.toml
apps/fparkan-viewer/src/: main.rs
apps/fparkan-vulkan-smoke/: Cargo.toml  build.rs
apps/fparkan-vulkan-smoke/src/: main.rs
apps/resource-viewer/: Cargo.toml
crates/fparkan-animation/: Cargo.toml
crates/fparkan-assets/: Cargo.toml
crates/fparkan-assets/src/: lib.rs
crates/fparkan-binary/: Cargo.toml
crates/fparkan-corpus/: Cargo.toml
crates/fparkan-corpus/src/: lib.rs
crates/fparkan-diagnostics/: Cargo.toml
crates/fparkan-fx/: Cargo.toml
crates/fparkan-fx/src/: lib.rs
crates/fparkan-inspection/: Cargo.toml
crates/fparkan-inspection/src/: lib.rs
crates/fparkan-material/: Cargo.toml
crates/fparkan-material/src/: lib.rs
crates/fparkan-mission-format/: Cargo.toml
crates/fparkan-msh/: Cargo.toml
crates/fparkan-msh/src/: lib.rs
crates/fparkan-nres/: Cargo.toml
crates/fparkan-path/: Cargo.toml
crates/fparkan-platform/: Cargo.toml
crates/fparkan-prototype/: Cargo.toml
crates/fparkan-prototype/src/: lib.rs
crates/fparkan-render/: Cargo.toml
crates/fparkan-resource/: Cargo.toml
crates/fparkan-resource/src/: lib.rs
crates/fparkan-rsli/: Cargo.toml
crates/fparkan-rsli/src/: lib.rs
crates/fparkan-runtime/: Cargo.toml
crates/fparkan-runtime/src/: lib.rs
crates/fparkan-script/: Cargo.toml
crates/fparkan-terrain/: Cargo.toml
crates/fparkan-terrain-format/: Cargo.toml
crates/fparkan-terrain-format/src/: lib.rs
crates/fparkan-terrain/src/: lib.rs
crates/fparkan-test-support/: Cargo.toml
crates/fparkan-texm/: Cargo.toml
crates/fparkan-vfs/: Cargo.toml
crates/fparkan-vfs/src/: lib.rs
crates/fparkan-world/: Cargo.toml
crates/msh-core/: Cargo.toml  README.md
crates/nres/: Cargo.toml  README.md
crates/render-core/: Cargo.toml  README.md
crates/render-demo/: Cargo.toml  README.md  build.rs
crates/render-demo/src/: lib.rs  main.rs
crates/render-mission-demo/: Cargo.toml
crates/render-mission-demo/src/: lib.rs  main.rs
crates/render-parity/: Cargo.toml  README.md
crates/rsli/: Cargo.toml  README.md
crates/terrain-core/: Cargo.toml
crates/texm/: Cargo.toml  README.md
crates/tma/: Cargo.toml
crates/unitdat/: Cargo.toml
docs/: index.md
docs/appendices/: glossary.md  knowledge-boundaries.md  saves-campaign.md  script-vm.md  ui-shell.md
docs/baseline/: current-project-audit.md  notion-reconciliation.md  vulkan-revision-plan.md
docs/evidence/: original_engine_hashes.md  stage4_capture_schema.md
docs/reference/: materials.md  msh.md  nres.md  render-frame.md  rsli.md  texm.md  tma.md
docs/rendering/: renderer_truth_table.md
docs/specs/: ai.md  arealmap.md  behavior.md  control.md  coverage-audit.md  effects.md  fxid.md  material.md  materials-texm.md  missions.md  msh-animation.md  msh-core.md  msh-notes.md  msh.md  network.md  nres.md  object-registry.md  render-parity.md  render.md  rsli.md  runtime-pipeline.md  sound.md  terrain-map-loading.md  texture.md  textures.md  ui.md  wear.md
docs/tomes/: 01-guide.md  02-architecture.md  03-resources.md  04-world.md  05-render.md  06-behavior.md  07-implementation.md  08-evidence.md
fixtures/acceptance/: coverage.tsv  macos-gl33-triangle-capture.json  stage_0_2_roadmap.md  stage_0_roadmap.md  stage_packages.toml
fixtures/schemas/: corpus-manifest.schema.json  report.schema.json
libnres/: Cargo.toml  README.md
libnres/src/: converter.rs  error.rs  lib.rs  reader.rs
libs/nres/: Cargo.toml  meson.build
nres-cli/: Cargo.toml  README.md
nres-cli/src/: main.rs
packer/: Cargo.toml  README.md
packer/src/: main.rs
parity/: README.md  cases.toml
resource-viewer/: Cargo.toml
testdata/: README.md
texture-decoder/: Cargo.toml
texture-decoder/src/: main.rs
tools/: README.md  archive_roundtrip_validator.py  capture-ai-init.ps1  capture-original-camera.ps1  capture-terrain-shade-cache.ps1  fxid_abs100_audit.py  init_testdata.py  msh_doc_validator.py  msh_export_obj.py  msh_preview_renderer.py  terrain_map_doc_validator.py  terrain_map_preview_renderer.py
tools/ghidra/: ExportAiCreateSuperAi.java  ExportAiExpressionDispatcher.java  ExportAiFtol.java  ExportAiGetSuperAi.java  ExportAiScriptLoader.java  ExportAiScriptLoaderStrings.java  ExportAiScriptPackageReader.java  ExportAiSuperAiConstructor.java  ExportAiVarSetLoader.java  (+25 more)
tools/nres-cli/: Cargo.toml  README.md
unpacker/: Cargo.toml  README.md
xtask/: Cargo.toml
xtask/src/: main.rs
(+58 files in other folders)
