[package]
name = "libnres"
version = "0.0.1"
description = "Library for NRes files"
authors = [
  "Valentin Popov <valentin@popov.link>"
]
homepage = "https://github.com/valentineus/fparkan"
repository = "https://github.com/valentineus/fparkan.git"
license = "GPL-2.0"
edition = "2021"
keywords = [
  "gamedev",
  "library",
  "nres"
]

[dependencies]
byteorder = "1.4"
thiserror = "1.0"
