[package]
name = "nres-cli"
version = "0.2.1"
description = "Console tool for NRes files"
authors = [
  "Valentin Popov <valentin@popov.link>"
]
homepage = "https://github.com/valentineus/fparkan"
repository = "https://github.com/valentineus/fparkan.git"
license = "GPL-2.0"
edition = "2021"
keywords = [
  "cli",
  "gamedev",
  "nres"
]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
console = "0.15"
dialoguer = { version = "0.10", features = ["completion"] }
indicatif = "0.17"
libnres = { version = "0.1", path = "../libnres" }
miette = { version = "5.4", features = ["fancy"] }
