[package]
name = "xtask"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
fparkan-corpus = { path = "../crates/fparkan-corpus" }
cargo_metadata = "0.23.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"

[lints]
workspace = true
