[package]
name = "fparkan-platform-winit"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
fparkan-platform = { path = "../../crates/fparkan-platform", version = "0.1.0" }
raw-window-handle = "0.6"
winit = "0.30"

[lints]
workspace = true
