[package]
name = "fparkan-platform-winit"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
fparkan-platform = { path = "../../crates/fparkan-platform", version = "0.1.0" }
raw-window-handle = "0.6"
winit = { version = "0.30", default-features = false, features = ["rwh_06", "x11", "wayland", "wayland-dlopen"] }

[lints]
workspace = true
