[package]
name = "fparkan-fx"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
fparkan-binary = { path = "../fparkan-binary", version = "0.1.0" }

[dev-dependencies]
fparkan-nres = { path = "../fparkan-nres", version = "0.1.0" }

[lints]
workspace = true
