[package]
name = "fparkan-material"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
encoding_rs = "0.8"
fparkan-path = { path = "../fparkan-path", version = "0.1.0" }
fparkan-resource = { path = "../fparkan-resource", version = "0.1.0" }

[dev-dependencies]
fparkan-nres = { path = "../fparkan-nres", version = "0.1.0" }
fparkan-vfs = { path = "../fparkan-vfs", version = "0.1.0" }

[lints]
workspace = true
