[package]
name = "fparkan-msh"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
encoding_rs = "0.8"
fparkan-nres = { path = "../fparkan-nres" }

[dev-dependencies]
fparkan-animation = { path = "../fparkan-animation" }

[lints]
workspace = true
