[package]
name = "fparkan-msh"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
encoding_rs = "0.8"
fparkan-animation = { path = "../fparkan-animation", version = "0.1.0" }
fparkan-nres = { path = "../fparkan-nres", version = "0.1.0" }

[lints]
workspace = true
