[package]
name = "fparkan-prototype"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
encoding_rs = "0.8"
fparkan-binary = { path = "../fparkan-binary" }
fparkan-path = { path = "../fparkan-path" }
fparkan-resource = { path = "../fparkan-resource" }
fparkan-vfs = { path = "../fparkan-vfs" }

[lints]
workspace = true

[dev-dependencies]
fparkan-nres = { path = "../fparkan-nres" }
