[package]
name = "fparkan-resource"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
fparkan-binary = { path = "../fparkan-binary" }
fparkan-nres = { path = "../fparkan-nres" }
fparkan-path = { path = "../fparkan-path" }
fparkan-rsli = { path = "../fparkan-rsli" }
fparkan-vfs = { path = "../fparkan-vfs" }

[lints]
workspace = true
