[package]
name = "fparkan-rsli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
fparkan-binary = { path = "../fparkan-binary", version = "0.1.0" }
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }

[lints]
workspace = true
