[package]
name = "fparkan-terrain"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
fparkan-terrain-format = { path = "../fparkan-terrain-format" }

[dev-dependencies]
fparkan-nres = { path = "../fparkan-nres" }

[lints]
workspace = true
