[package]
name = "fparkan-terrain"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
fparkan-terrain-format = { path = "../fparkan-terrain-format", version = "0.1.0" }

[dev-dependencies]
fparkan-nres = { path = "../fparkan-nres", version = "0.1.0" }

[lints]
workspace = true
