[package]
name = "fparkan-vfs"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
fparkan-binary = { path = "../fparkan-binary", version = "0.1.0" }
fparkan-path = { path = "../fparkan-path", version = "0.1.0" }

[lints]
workspace = true
