[package]
name = "render-demo"
version = "0.1.0"
edition = "2021"

[features]
default = []
demo = ["dep:sdl2", "dep:glow", "dep:image"]

[dependencies]
encoding_rs = "0.8"
msh-core = { path = "../msh-core" }
nres = { path = "../nres" }
render-core = { path = "../render-core" }
texm = { path = "../texm" }
glow = { version = "0.16", optional = true }
image = { version = "0.25", optional = true, default-features = false, features = ["png"] }

[dev-dependencies]
common = { path = "../common" }

[target.'cfg(target_os = "macos")'.dependencies]
sdl2 = { version = "0.37", optional = true, default-features = false, features = ["use-pkgconfig"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
sdl2 = { version = "0.37", optional = true, default-features = false, features = ["bundled", "static-link"] }

[[bin]]
name = "parkan-render-demo"
path = "src/main.rs"
required-features = ["demo"]
