[package]
name = "nres-cli"
version = "0.2.3"
edition = "2021"

[dependencies]
byteorder = "1.4"
clap = { version = "4.5", features = ["derive"] }
console = "0.16"
dialoguer = { version = "0.12", features = ["completion"] }
indicatif = "0.18"
libnres = { version = "0.1", path = "../../libs/nres" }
miette = { version = "7.0", features = ["fancy"] }
tempdir = "0.3"
